2002-11-01  Jens Finke <jens@triq.net>

	Finished commit and update dialogs. Some minor polishing and
	packaging stuff.

	Removed the 'intelligent' glutter position algorithm.

	* configure.in: Bumped version to 0.2.

2002-10-25  Jens Finek <jens@triq.net>

	Based on a patch by Andy Piper <andy.piper@freeuk.com>.
	
	* src/apotheke-view.c: Read and write bool for hide_ignored key.
	String fixes.

	* apotheke.schemas: Type fixes. 

2002-06-16  Jens Finke <jens@triq.net>

	* apotheke.schemas: Added apps/apotheke/diff/operation key.

	* src/apotheke-client-cvs.c (assemble_diff_cmd): Consider diff operation.

	* src/apotheke-cvs-dialogs.c (on_radiobutton_toggled),
	(init_radio_button): New functions.
	(apotheke_cvs_dialog_diff_show): Setup different diff operations
	and read users input.

	* src/apotheke-options.h: Added options for different compare types.

	* src/apotheke.glade: Renamed some widgets.
	
2002-06-10  Jens Finke <jens@triq.net>

	* apotheke-cvs-dialogs.[ch],
	* apotheke.glade,
	* apotheke-glade.h: New files.

	* apotheke.schemas: Added keys for diff options, changed most
	settings to bool type.

	* configure.in: Added check for libglade.

	* src/Makefile.am: Added glade stuff and new files.

	* src/apotheke-client-cvs.c (assemble_diff_cmd): Handle -b option.

	* src/apotheke-main.c: Don't initialize gconf here.

	* src/apotheke-options.h: Use ApothekeOptions as "base struct" for
	the other ones.

	* src/apotheke-view-ui.xml.in: Display only the most important
	commands for now.

	* src/apotheke (verb_CVS_status_cb), (verb_CVS_diff_cb): Use new
	APOTHEKE_OPTIONS macro.
	(verb_CVS_diff_cb): Show options dialog.
	(call_paned_set_position): New function.
	(construct_ui): Add idle function for placing the gutter (doesn't
	work either).
	(apotheke_view_instance_init): Initialize gconf if neccessary.
	
2002-06-02  Jens Finke <jens@triq.net>

	* src/apotheke-view.c (execute_cvs_command): Scroll to end of
	buffer after command is finished.
