@@ -1,0 +1,62 @@
+Name:		apotheke
+Version:	@VERSION@
+Release:	2
+Summary:	CVS Management View for Nautilus Filemanager
+Group:		Applications/Development
+License:	GPL
+URL:		http://apotheke.berlios.de/
+Vendor:         GStreamer Backpackers Team <package@gstreamer.net>
+Source:		ftp://ftp.berlios.de/pub/apotheke/%{name}-%{version}.tar.gz
+BuildRoot:	%{_tmppath}/%{name}-%{version}-root
+BuildRequires:  fam-devel
+BuildRequires:	nautilus
+Requires:	fam
+Requires:	nautilus
+Prereq:		/sbin/ldconfig
+
+%description 
+Apotheke is a separate Nautilus view, which gives you detailed information
+about CVS managed directories. CVS is the "Concurrent Version System" which is
+often used by (free) software projects to manage there sourcecode.
+
+%prep
+%setup -q 
+
+%build
+%configure CFLAGS="$RPM_OPT_FLAGS" 
+
+%install
+[ "$RPM_BUILD_ROOT" != "/" ] && rm -rf $RPM_BUILD_ROOT
+export GCONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1
+%makeinstall
+
+# Clean out files that should not be part of the rpm.
+# This is the recommended way of dealing with it for RH8
+rm -f $RPM_BUILD_ROOT%{_libdir}/*.la
+
+%clean
+[ "$RPM_BUILD_ROOT" != "/" ] && rm -rf $RPM_BUILD_ROOT
+
+%post
+export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` 
+gconftool-2 --makefile-install-rule %{_sysconfdir}/gconf/schemas/apotheke.schemas > /dev/null
+/sbin/ldconfig
+
+
+%postun
+/sbin/ldconfig
+
+%files
+%defattr(-,root,root)
+%doc AUTHORS COPYING NEWS README
+%{_bindir}/apotheke-view
+%{_libdir}/bonobo/servers/Apotheke_View.server
+%{_sysconfdir}/gconf/schemas/apotheke.schemas
+%{_datadir}/apotheke/glade/apotheke.glade
+%{_datadir}/gnome-2.0/ui/apotheke-view-ui.xml
+%{_datadir}/pixmaps/apotheke/*.png
+%{_datadir}/locale
+
+%changelog
+* Thu Nov 07 2002 Christian F.K. Schaller <Uraeus@linuxrising.org>
+- First attempt at spec
